tests/snapshots/examples_fixtures/type_system__failing__56_strict_any_nested_rejected.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/56_strict_any_nested_rejected.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Any with Int.

  --> examples/type_system/failing/56_strict_any_nested_rejected.flx:2:5
  |
2 |     1
  |     ^
  |     - expected Any, found Int
  |     - return expression type is known at compile time

Help:
  return expression type does not match the declared return type
  Unknown type `Any` — did you mean `Int`?
== stdout ==
<not executed>
